[package]
name = "fly-challenge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
derive_more = "0.99.17"
clokwerk = "0.4.0"

[dependencies.uuid]
version = "1.3.0"
features = ["fast-rng", "v4", "macro-diagnostics", "serde"]